--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3c.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head><meta content="text/html; charset=windows-1251" http-equiv="Content-Type"/><title>ТУТ ЗАЙЦЕВ НЕТ! Здесь музыка в mp3 бесплатно, скачать музыку бесплатно! скачать фильмы онлайн, mp3 без регистрации, секс форум, чат, радио, рейтинг TOP100</title><link href="http://zaycev.net/static/images/favicon.ico" rel="shortcut icon"/><meta content="Free download, mp3" name="keywords"/><meta content="ТУТ ЗАЙЦЕВ.НЕТ! ТУТ тонны самых свежих и популярных mp3 бесплатно и без регистрации - скачай всего за 2 клика. Ежечасные круглосуточные обновления. Хит-парады и рейтинги и всё без зайцев! КАЧАЙ!" name="description"/><script type="text/javascript">
+<html xmlns="http://www.w3.org/1999/xhtml"><head><title>ТУТ ЗАЙЦЕВ НЕТ! Здесь музыка в mp3 бесплатно, скачать музыку бесплатно! скачать фильмы онлайн, mp3 без регистрации, секс форум, чат, радио, рейтинг TOP100</title><link href="http://zaycev.net/static/images/favicon.ico" rel="shortcut icon"/><meta content="Free download, mp3" name="keywords"/><meta content="ТУТ ЗАЙЦЕВ.НЕТ! ТУТ тонны самых свежих и популярных mp3 бесплатно и без регистрации - скачай всего за 2 клика. Ежечасные круглосуточные обновления. Хит-парады и рейтинги и всё без зайцев! КАЧАЙ!" name="description"/><script type="text/javascript">
 
 function SetCookie(name, value, days){
 expires = new Date(today.getTime() + days*24*60*60*1000);
